Switching between edit mode, and particle edit mode consistently crashes. #57477

Closed
opened 2018-10-28 22:23:08 +01:00 by Rob Fletcher · 20 comments

System Information

  • Windows 10 Home, 64bit-bit
  • Nvidia GTX 970 driver: 388.13

Blender Version
2.8 alpha 2 efa3389b83

Short description of error
After grooming, switching from particle edit mode to edit mode causes blender to crash

Exact steps for others to reproduce the error

  • open blend file
  • enter particle edit mode using tab menu
  • brush hair strands ( If this is not done the bug does not appear )
  • press tab a few times to toggle between particle edit mode and edit mode.
  • crash to desktop

I get the following error from stderr

Error   : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF6AC5470A8
Module  : C:\Users\robert\Downloads\blender-2.80.0-git.efa3389b83e-windows64\blender.exe

example.blend

Thanks :)

**System Information** - Windows 10 Home, 64bit-bit - Nvidia GTX 970 driver: 388.13 **Blender Version** 2.8 alpha 2 efa3389b83e **Short description of error** After grooming, switching from `particle edit mode` to `edit mode` causes blender to crash **Exact steps for others to reproduce the error** - open blend file - enter particle edit mode using tab menu - brush hair strands ( If this is not done the bug does not appear ) - press tab a few times to toggle between particle edit mode and edit mode. - crash to desktop I get the following error from stderr ``` Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF6AC5470A8 Module : C:\Users\robert\Downloads\blender-2.80.0-git.efa3389b83e-windows64\blender.exe ``` [example.blend](https://archive.blender.org/developer/F5276394/example.blend) Thanks :)
Author

Added subscriber: @RobertFletcher

Added subscriber: @RobertFletcher

#57797 was marked as duplicate of this issue

#57797 was marked as duplicate of this issue

#57641 was marked as duplicate of this issue

#57641 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Cannot reproduce here.

Does this also happen with the latest build from builder.blender.org (and updated GPU drivers)?

Cannot reproduce here. Does this also happen with the latest build from builder.blender.org (and updated GPU drivers)?

Added subscriber: @antoniov

Added subscriber: @antoniov

Can reproduce in Windows (last source compiled)

Crash log:

recalc_emitter_field - 0x2E95C770
19: particle_edit_toggle_exec - 0x2E96C160
18: wm_operator_invoke - 0x2E2E1780
17: wm_operator_call_internal - 0x2E2DFC80
16: WM_operator_name_call_ptr - 0x2E2DAAE0
15: WM_operator_name_call - 0x2E2DABF0
14: ED_object_mode_toggle - 0x2E837530
13: object_mode_set_exec - 0x2E859290
12: wm_operator_invoke - 0x2E2E1780
11: wm_handler_operator_call - 0x2E2E2B50
10: wm_handlers_do_intern - 0x2E2E3B60
9: wm_handlers_do - 0x2E2E4A80
8: wm_event_do_handlers - 0x2E2DD220
7: WM_main - 0x2E2B8D10
6: main - 0x2E2B1060
Can reproduce in Windows (last source compiled) Crash log: ``` recalc_emitter_field - 0x2E95C770 19: particle_edit_toggle_exec - 0x2E96C160 18: wm_operator_invoke - 0x2E2E1780 17: wm_operator_call_internal - 0x2E2DFC80 16: WM_operator_name_call_ptr - 0x2E2DAAE0 15: WM_operator_name_call - 0x2E2DABF0 14: ED_object_mode_toggle - 0x2E837530 13: object_mode_set_exec - 0x2E859290 12: wm_operator_invoke - 0x2E2E1780 11: wm_handler_operator_call - 0x2E2E2B50 10: wm_handlers_do_intern - 0x2E2E3B60 9: wm_handlers_do - 0x2E2E4A80 8: wm_event_do_handlers - 0x2E2DD220 7: WM_main - 0x2E2B8D10 6: main - 0x2E2B1060 ```

Here the line with crash. edit->psmd_eval has NaN and Mesh is invalid.

image.png

Here the line with crash. edit->psmd_eval has NaN and Mesh is invalid. ![image.png](https://archive.blender.org/developer/F5281839/image.png)
Author

Apologies Philipp, That should have been my first check.
Im now using:

Operating System:	Windows 10 Home, 64-bit
GPU processor:		GeForce GTX 970
Driver version:		416.34
blender-2.80.0-git.c750ebe113e-windows64

and im experiencing the same behavior

Apologies Philipp, That should have been my first check. Im now using: ``` Operating System: Windows 10 Home, 64-bit GPU processor: GeForce GTX 970 Driver version: 416.34 blender-2.80.0-git.c750ebe113e-windows64 ``` and im experiencing the same behavior
Member

Added subscriber: @jordonbc

Added subscriber: @jordonbc
Member

Added subscriber: @dddstudio

Added subscriber: @dddstudio

I can confirm this. Happens every time on my machine.
Win10(64), latest driver GTX670, latest daily build 2.8

I can confirm this. Happens every time on my machine. Win10(64), latest driver GTX670, latest daily build 2.8

But it is not Nvidia GTX specific. It also happens on integrated Intel HD graphics.

But it is not Nvidia GTX specific. It also happens on integrated Intel HD graphics.
Sergey Sharybin was assigned by Philipp Oeser 2018-11-14 09:54:58 +01:00
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

just a shot in the dark, but does this happen with the --threads 1 commandline option as well?

@Sergey: one for you?

just a shot in the dark, but does this happen with the `--threads 1` commandline option as well? @Sergey: one for you?

Yes, just tested it: it also happens with the --threads 1 commandline option.

Yes, just tested it: it also happens with the --threads 1 commandline option.

This issue was referenced by be405495a9

This issue was referenced by be405495a9cfd70b531d6ca41e3f4a7f1e0ae9be

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thanks Sergey!
Can't wait to try it.

Thanks Sergey! Can't wait to try it.

Hi Sergey,

Thanks for the fix, it works between toggling particle edit and edit mode (TAB).

But now it crashes when toggling between object mode and edit mode. At least on my end. :)
Let me know if I should provide more info.
(blender-2.80.0-git.2c347ebbba9-windows64)

Hi Sergey, Thanks for the fix, it works between toggling particle edit and edit mode (TAB). But now it crashes when toggling between object mode and edit mode. At least on my end. :) Let me know if I should provide more info. (blender-2.80.0-git.2c347ebbba9-windows64)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57477
No description provided.