Fix T57477: Switching between edit mode, and particle edit mode crashes